--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
-  <body>
+  <body style="padding: 20px;">
     <section class="page-header">
       <h1 class="project-name">Surveillance Station</h1>
     </section>
