--- a/docs/monitoring/_layouts/default.html
+++ b/docs/monitoring/_layouts/default.html
@@ -82,7 +82,7 @@
 <script type="text/javascript" src="/{{site.github.project_title}}/assets/js/jquery.toc.js"></script>
 <script type="text/javascript">
   $(document).ready(function() {
-   var title = 'Surveillance Station';
+   var title = 'Monitoring';
    title = title.replace('plugin-','');
    $('#doc_title').append(title[0].toUpperCase() + title.substring(1))
    document.title = 'Documentation Jeedom | '+ title[0].toUpperCase() + title.substring(1)
